[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sprites_UI/Fundo-inventario_03.png" type="Texture2D" id=1]
[ext_resource path="res://Assets/Sprites_UI/folha.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Sprites_UI/SETA2.png" type="Texture2D" id=3]
[ext_resource path="res://Assets/Sprites_UI/SETA.png" type="Texture2D" id=4]
[ext_resource path="res://Assets/Sprites_UI/CPF2_03.png" type="Texture2D" id=5]
[ext_resource path="res://Assets/Sprites_UI/Kenney Bold.ttf" type="FontFile" id=6]
[ext_resource path="res://Assets/Sprites_UI/carteira_de_vacinacao2_03.png" type="Texture2D" id=7]
[ext_resource path="res://Assets/Sprites_UI/jojo_3_03.png" type="Texture2D" id=8]
[ext_resource path="res://Scenes/Inventário.gd" type="Script" id=9]
[ext_resource path="res://Assets/audio/PAPEL.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sprites_Jogador/RG2_06.png" type="Texture2D" id=11]
[ext_resource path="res://Assets/Sprites_Jogador/Reserva_natural_2_03.png" type="Texture2D" id=12]
[ext_resource path="res://Assets/Sprites_UI/RG2_03.png" type="Texture2D" id=13]
[ext_resource path="res://Assets/Sprites_Jogador/Reserva_natural_2_06.png" type="Texture2D" id=14]

[sub_resource type="FontFile" id=1]
size = 10
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="Inventário" type="Node2D"]
script = ExtResource( 9 )

[node name="Capa" type="TextureRect" parent="."]
offset_left = 336.0
offset_top = 40.0
offset_right = 685.0
offset_bottom = 566.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Folha" type="TextureRect" parent="Capa"]
offset_top = 10.4435
offset_right = 348.0
offset_bottom = 531.444
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EsquerdaSeta" type="TextureButton" parent="."]
offset_left = 200.0
offset_top = 280.0
offset_right = 339.0
offset_bottom = 359.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DireitaSeta" type="TextureButton" parent="."]
offset_left = 680.0
offset_top = 280.0
offset_right = 820.0
offset_bottom = 370.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPF" type="TextureRect" parent="."]
offset_left = 304.0
offset_top = 232.0
offset_right = 711.0
offset_bottom = 424.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CPFNome" type="Label" parent="CPF"]
anchor_left = 0.0648254
anchor_top = 0.619679
anchor_right = 0.606545
anchor_bottom = 0.692595
offset_right = -8.48001
scale = Vector2( 1.04, 1 )
theme_override_fonts/font = SubResource( 1 )
text = "Sua Mae aquela prostitua vesga"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CPFNum" type="Label" parent="CPF"]
anchor_left = 0.0638821
anchor_top = 0.467443
anchor_right = 0.605602
anchor_bottom = 0.550777
offset_left = 1.90735e-06
offset_right = -8.48
scale = Vector2( 1.04, 1 )
theme_override_fonts/font = SubResource( 1 )
text = "69420"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CarteiraVac" type="TextureRect" parent="."]
visible = false
offset_left = 310.396
offset_top = 113.955
offset_right = 703.396
offset_bottom = 506.955
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CertNasc" type="TextureRect" parent="."]
visible = false
offset_left = 323.0
offset_top = 40.0
offset_right = 697.0
offset_bottom = 582.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CartNascNom" type="Label" parent="CertNasc"]
anchor_left = 0.130979
anchor_top = 0.1959
anchor_right = 0.720497
anchor_bottom = 0.22542
offset_top = -7.62939e-06
offset_right = -8.47998
scale = Vector2( 1.04, 1 )
theme_override_fonts/font = SubResource( 1 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sua Mae aquela prostitua vesga"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Folheando" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="RGFrente" type="TextureRect" parent="."]
visible = false
offset_left = 336.0
offset_top = 547.151
offset_right = 1113.0
offset_bottom = 1116.15
rotation = -90.0
scale = Vector2( 0.600001, 0.600001 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RGVerso" type="TextureRect" parent="."]
visible = false
offset_left = 336.0
offset_top = 547.151
offset_right = 1113.0
offset_bottom = 1116.15
rotation = -90.0
scale = Vector2( 0.600001, 0.600001 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RGNom" type="Label" parent="RGVerso"]
anchor_left = -0.515834
anchor_top = 0.305398
anchor_right = 0.0736843
anchor_bottom = 0.334919
offset_left = 560.23
offset_top = -53.2534
offset_right = 772.23
offset_bottom = -41.2534
scale = Vector2( 1.04, 1 )
theme_override_fonts/font = SubResource( 1 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sua Mae aquela prostitua vesga"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RGNum" type="Label" parent="RGVerso"]
anchor_left = -0.466907
anchor_top = 0.408623
anchor_right = 0.122611
anchor_bottom = 0.438143
offset_left = 560.23
offset_top = -53.2534
offset_right = 772.23
offset_bottom = -41.2534
scale = Vector2( 1.04, 1 )
theme_override_fonts/font = SubResource( 1 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "69420"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ReserFren" type="TextureRect" parent="."]
visible = false
offset_left = 288.0
offset_top = 96.0
offset_right = 328.0
offset_bottom = 136.0
scale = Vector2( 11.36, 11.36 )
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReserNum" type="Label" parent="ReserFren"]
anchor_left = -0.628187
anchor_top = 0.234775
anchor_right = -0.0386681
anchor_bottom = 0.264295
offset_left = 29.7652
offset_top = 17.872
offset_right = 275.184
offset_bottom = 32.6912
scale = Vector2( 0.150141, 0.144366 )
theme_override_fonts/font = SubResource( 1 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "69420"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ReserVer" type="TextureRect" parent="."]
visible = false
offset_left = 288.0
offset_top = 96.0
offset_right = 328.0
offset_bottom = 136.0
scale = Vector2( 11.36, 11.36 )
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="EsquerdaSeta" to="." method="_on_EsquerdaSeta_pressed"]
[connection signal="pressed" from="DireitaSeta" to="." method="_on_DireitaSeta_pressed"]
